--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>/</button>
+            <button>÷</button>
 
             <button>DEL</button>
             <button>0</button>
