--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
         <div class="input">
             <button>AC</button>
-            <button>(</button>
-            <button>)</button>
+            <button>DEL</button>
+            <button>.</button>
             <button>+</button>
 
             <button>7</button>
@@ -33,11 +33,11 @@
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>÷</button>
+            <button>/</button>
 
-            <button>DEL</button>
+            <button>(</button>
             <button>0</button>
-            <button>.</button>
+            <button>)</button>
             <button>=</button>
         </div>
     </div>
